Fixed Stats page player image being squished.

--- a/Baseball 101/src/css/MyStats.css
+++ b/Baseball 101/src/css/MyStats.css
@@ -115,12 +115,12 @@
 
 .todayStatsPicReveal {
   width: 100px;
-  height: 100px;
+  height: auto;
 }
 
 .todayStatsPicHidden {
   width: 100px;
-  height: 100px;
+  height: auto;
   -webkit-filter: drop-shadow(2px 2px 0 rgba(255, 255, 255, 0.75))
     drop-shadow(-2px 2px 0 rgba(255, 255, 255, 0.75))
     drop-shadow(2px -2px 0 rgba(255, 255, 255, 0.75))
